[package]
name = "aggregator-router"
version = "0.1.0"
description = "Agent-native on-chain DEX aggregation router (Raydium, Meteora, Kamino, Pump.fun)"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]
name = "aggregator_router"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.29.0"
solana-program = "=1.17.34"
